resources/public/css/main.css
/* ... */
/* Hanzi are made a bit darker than latin text to make them stand out */
:lang(zh) {
	color: #555555;
}

::placeholder {
    color: #DDD;
}

html, body, #app {
    height: 100%;
}

a {
    /* So that links won't suddenly reset a custom font to the global one. */
    font-family: inherit;
	color: inherit;
	text-decoration: none;
}

a:hover {
	color: #4477DD;
}

/* headings and content inside them get the serif fonts */
h1, h2, h3, h1 *, h2 *, h3 * {
	color: #555555;
	font-family: Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", "KaiTi", "楷体", STKaiti, "华文楷体", serif;
}

h1 {
    font-size: 24pt;
}

h2 {
    font-size: 20pt;
}

p {
	font-size: 14pt;
	margin: 0 0 1em 0;
}

ol, ul {
    margin: 1em 0 1em 4ch;
}

li {
    margin-bottom: 0.2em;
}

table {
    /* remove double border */
    border-collapse: collapse;

    font-size: 12pt;
    margin: 1rem 0 0 0;
}

tr {
    border: 1px solid #DDD;
}

td, th {
    padding: 1ch 2ch;
}

th {
    color: #333;
    background: #EEE;
	font-family: Didot, "Didot LT STD", "Hoefler Text", Garamond, "Times New Roman", "KaiTi", "楷体", STKaiti, "华文楷体", serif;
    font-size: 125%;
    font-weight: 400;
}


/* === ANIMATIONS === */

@keyframes fade-in {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}




/* === MAIN & HEADER === */

/*  would have styled BODY or HTML instead if React could access them */
main {
    height: 100%; /* also set for all parent elements */

    /* align items vertically */
    display: flex;
    flex-direction: column;
    align-items: center; /* center horisontally */
    justify-content: space-between; /* add space between header and footer */

    background: #FCFCFB;

    transition: all 0.5s;
}

/* The header (logo, input bar) transitions from center to top.  */
header {
	width: 100%;

    /* align approximately in the center when*/
	margin-top: 33.3vh;

	/* Faster going down than up! */
	transition: all 0.3s;
}

main.with-article > header {
	/* Slower going up than down. */
	transition: all 0.5s;

    /* Go to the top of the page (resets  margin set in header) */
	margin-top: 0;
}

/* 	TODO: do I need this?
    aligner is necessary for limiting width and centering horisontally!
	without "min-width:98%;" in .vcenter, .vcentor gets crammed,
	so this extra class is necessary to get a max-width.
*/
header div#aligner {
	max-width: 80ch;
	margin: auto;
	padding: 1ch;
	text-align: center;
	vertical-align: middle;

	/* makes logo img able to assume 0 height */
	line-height: 0;
}

/*  The main logo of the site fades in like most elements and gets smaller
    when the site displays some page content. */
header img {
	animation: fade-in 0.5s ease;
	transition: all 0.3s;
    max-height: 7em;
    margin-bottom: 2em;
	width: 90%; /* otherwise image could overflow on small page widths */

    /* TODO: find fixes for non-Chrome browsers */
    user-drag: none;
    user-select: none;
}

main.with-article > header img {
	max-height: 0;
	margin: 0;
	vertical-align: middle;
}

/* Also known as the #study-form */
div#header-input {
	display: flex;
}

/* Formerly known as the #study-input */
div#header-input > input {
	animation: fade-in 1s ease;
    transition: all 0.5s;

	font-size: 20pt;
	color: black;

	padding: 0.2ch 0.4ch;
	border: 1pt solid #999999;
	border-radius: 0.5ch;
	background-color: white;

	/* Take up full width */
    flex: 1;
}

/* Grey colouring of input when action-chooser is active */
div#header-input > input[disabled] {
	background-color: #DDDDDD;
}

/* Formerly known as the #study-button */
div#header-input > button {
	border: 0;
	padding: 0;
	font-size: 0;
	width: 0;
}



/* === VERSION NUMBER === */
address {
	animation: fade-in 3s ease;
	color: #DDD;
	font-size: 10pt;
	font-style: inherit;
	letter-spacing: 0.2ch;
	position: absolute;
	padding: 1em;
	right: 0;
	top: 0;
	transition: all 0.5s;
}

main.with-article address {
    opacity: 0;
}




/* === FILTERS === */
div#filters {
    transition: all 0.3s;
    margin: 1.2em 0 0.3em 0;
    font-size: 12pt;
    color: #DDDDDD; /* for the separating dots */
    letter-spacing: 0.3ch;
    word-spacing: 0.5ch;
    text-align: center;
}

/* TODO: there is a slight cursor flicker on hover I can't seem to remove */
/* the opacity of the labels is changed back instantly to avoid overflow */
div#filters.hidden {
    transition: height 0.3s, margin 0.3s, opacity 0s;
    height: 0;
    margin: 0;
    opacity: 0;
    display: hidden; /* make sure it's not selectable */
}

div#filters input[type=radio] {
    /* hide the actual radio button */
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    -o-appearance: none;
    appearance: none;
}

div#filters input[type=radio] + label {
    cursor: pointer;
    color: #CCCCCC;
    transition: all 0.5s;
}

div#filters input[type=radio] + label:hover {
    text-decoration: underline;
}

div#filters input[type=radio]:checked + label {
    color: black;
}

div#filters input[type=radio]:checked + label:hover {
    text-decoration: none;
    cursor: default;
}




/* === ARTICLE === */

/* controls where the content appears */
article {
    background: white;
    border: 1px solid #DDD;
    border-bottom: none;
	animation: fade-in 0.5s ease;
	transition: all 0.3s; /* should be synchronised with filters transition */

	/* take up all middle space and allow for scrolling */
    flex-grow: 1;
    overflow: auto;

	/* box */
    box-sizing: border-box; /* allow 100% width + padding with not overflow */
	width: 100%;
	height: 100%;
	padding: 1ch;
	max-width: 80ch;
}



/* === FOOTER === */

footer {
	animation: fade-in 1.5s ease;

	/* text */
	text-align: center;

	/* box */
	background: #BB5544;
	padding: 1.2em 0;
	width: 100%;

	/* shadow */
	box-shadow: inset 0 0 1.5rem 0 rgba(0, 0, 0, 0.3);
}

nav {
	/* text-related */
    font-size: 12pt;
    word-spacing: 0.3ch;
    line-height: 1em;
    color: #FFBBBB;
}

nav a {
    letter-spacing: 0.4ch;
}
/* ... */

